# cppmake

./: .gitignore  IDEAS.MD  hello.py  install.py  pyproject.toml  readme.md  upload.py
cppmake/: __init__.py  __main__.py  pyproject.toml
cppmake/basic/: config.py  exit.py
cppmake/builder/: cmake.py  git.py  include.py  makefile.py
cppmake/compiler/: all.py  clang.py  gcc.py  msvc.py
cppmake/cppmake/: __main__.py
cppmake/error/: config.py  logic.py  subprocess.py
cppmake/execution/: operation.py  run.py  scheduler.py
cppmake/file/: file_import.py  file_system.py
cppmake/logger/: compile_commands.py  compile_output.py  file_export.py  module_imports.py  module_mapper.py  package_status.py
cppmake/system/: all.py  linux.py  macos.py  windows.py
cppmake/unit/: executable.py  module.py  package.py  source.py
cppmake/utility/: algorithm.py  color.py  decorator.py  inline.py  sarif.py
cppmaked/: pyproject.toml
cppmakelib/: pyproject.toml
cppmakelib/cppmakelib/: __init__.py
cppmakelib/cppmakelib/basic/: config.py  context.py  exit.py
cppmakelib/cppmakelib/builder/: cmake.py  git.py  include.py  makefile.py
cppmakelib/cppmakelib/compiler/: all.py  clang.py  emcc.py  gcc.py  msvc.py
cppmakelib/cppmakelib/error/: config.py  logic.py
cppmakelib/cppmakelib/execution/: run.py  scheduler.py
cppmakelib/cppmakelib/executor/: run.py
cppmakelib/cppmakelib/file/: file_import.py  file_system.py
cppmakelib/cppmakelib/logger/: compile_commands.py  compile_output.py  module_imports.py  module_mapper.py  module_status.py  package_status.py  source_status.py  unit_preprocess.py  unit_status.py
cppmakelib/cppmakelib/system/: all.py  linux.py  macos.py  wasm.py  windows.py
cppmakelib/cppmakelib/unit/: binary.py  code.py  dynamic.py  executable.py  header.py  module.py  object.py  package.py  precompiled.py  preparsed.py  source.py  static.py
cppmakelib/cppmakelib/utility/: algorithm.py  color.py  decorator.py  filesystem.py  inline.py  module.py  sarif.py  template.py  time.py  version.py
cppmakelib/cppmakelib/utility/remote/: protocol.py
example/: cppmake.py  readme.md
example/module/: hello.cpp  world.cpp
example/module/world/: better.cpp  ending.cpp  secret.cpp
example/package/std/: cppmake.py
example/source/: main.cpp
import/cppmakelib/basic/: context.py
import/cppmakelib/builder/: cmake.py  makefile.py
import/cppmakelib/compiler/: emcc.py  gcc.py  msvc.py
import/cppmakelib/executor/: operation.py
import/cppmakelib/logger/: compile_commands.py  unit_status.py
import/cppmakelib/system/: all.py  macos.py
import/cppmakelib/unit/: binary.py  code.py  dynamic.py  module.py  package.py
import/cppmakelib/utility/: color.py  decorator.py  filesystem.py  import_.py  version.py
lib/cppmakelib/: __init__.py
lib/cppmakelib/basic/: config.py  context.py
lib/cppmakelib/builder/: cmake.py  makefile.py
lib/cppmakelib/compiler/: all.py  clang.py  emcc.py  gcc.py  msvc.py
lib/cppmakelib/error/: subprocess.py
lib/cppmakelib/executor/: run.py  scheduler.py
lib/cppmakelib/logger/: compile_commands.py  unit_status.py
lib/cppmakelib/system/: all.py  linux.py  macos.py  windows.py
lib/cppmakelib/unit/: binary.py  code.py  dynamic.py  executable.py  header.py  module.py  object.py  package.py  precompiled.py  preparsed.py  preprocessed.py  source.py
lib/cppmakelib/utility/: algorithm.py  color.py  decorator.py  filesystem.py  import_.py  version.py
share/: idea.txt  ideas.md
src/: cppmake.py
test/: a.py  b.py
(+22 files in other folders)
