[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cppmake"
version = "0.1.0"
description = "A modern C++ builder based on C++20 Modules."
authors = [{name = "anonymouspc", email = "shyeyian@petalmail.com"}]
readme = "readme.md"
requires-python = ">=3.13"
license = "MIT"
scripts = {cppmake = "cppmake.__main__:main"}

[tool.setuptools]
packages = ["cppmake"]
include-package-data = true
