[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cppmake"
version = "127.0.17"
description = "A modern C++ builder based on C++20 Modules."
authors = [{name = "shyeyian", email = "shyeyian@icloud.com"}]
readme = "readme.md"
requires-python = ">=3.13"
license = "MIT"
scripts = {cppmake = "cppmake:main", cppmaked = "cppmaked:main"}

[tool.setuptools]
py-modules = ["cppmake", "cppmaked"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cppmakelib*"]