[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cppmake"
version = "127.0.18"
description = "A modern C++ builder based on C++20 Modules."
authors = [{name = "shyeyian", email = "shyeyian@icloud.com"}]
readme = "readme.md"
requires-python = ">=3.13"
license = "GPL-3.0"
scripts = {cppmake = "cppmake.__main__:main", cppmaked = "cppmaked.__main__:main"}

[tool.setuptools.packages.find]
where = ["bin", "import"]
namespaces = true

