[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cppmake"
version = "127.0.2"
description = "A modern C++ builder based on C++20 Modules."
authors = [{name = "anonymouspc", email = "shyeyian@petalmail.com"}]
readme = "readme.md"
requires-python = ">=3.13"
license = "MIT"
scripts = {cppmake = "cppmake.__main__:main"}
dependencies = ["cppmakelib"]

[tool.setuptools.packages.find]
include = ["cppmake*"]