[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cppmakelib"
version = "127.0.8"
description = "A modern C++ builder based on C++20 Modules."
authors = [{name = "anonymouspc", email = "shyeyian@petalmail.com"}]
readme = "readme.md"
requires-python = ">=3.13"
license = "MIT"
scripts = {}
dependencies = []

[tool.setuptools.packages.find]
include = ["cppmakelib*"]